[package]
name = "constellation-networkx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "constellation_networkx"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["chrono"] }
nyx-space = "1.1.2"
once_cell = "1.19.0"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uom = "0.35.0"
chrono = "0.4.34"
itertools = "0.12.1"
